frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fintech-app
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 80
